[package]
name = "rime"
version = "0.1.0"
authors = ["wzhd"]
edition = "2018"
license = "MIT"

[dependencies]
derivative = "1.0"
failure = "0.1"
libc = "0.2"
dirs = "1.0.4"
termion = { version = "1", optional = true }

[features]
default = [ "term" ]
term = [ "termion" ]

[[bin]]
name = "ttw"
path="src/bin/rime-demo-term.rs"
required-features = [ "term" ]
